[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.27"
clap_derive = "4.5.24"
compact_str = "0.8.1"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dashmap = "6.1.0"
fastrand = "2.3.0"
futures = "0.3.31"
ratatui = "0.29.0"
textwrap = "0.16.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", default-features = true, features = ["env-filter", "parking_lot", "smallvec", "fmt", "tracing-log", "std", "ansi"] }
tui-textarea = "0.7.0"
